src/objects/Application_Error_Log__c.object
<CustomObject>
    <description>In case of webservice call, store request and response as attachments</description>
    <fields>
        <fullName>AggregateQueries__c</fullName>
        <description>The number of aggregate queries that have been processed with any SOQL query statement.</description>
        <label>Aggregate Queries</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Application Name - Functionality name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Application</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPUTime__c</fullName>
        <description>CPU time is calculated for the executing Apex code, and for any processes that are called from this code, such as package code and workflows. CPU time is private for a transaction and is isolated from other transactions. Operations that don’t consume application server CPU time aren’t counted toward CPU time.</description>
        <label>CPU Time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Callouts__c</fullName>
        <description>The number of Web service statements that have been processed.</description>
        <label>Callouts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClassName__c</fullName>
        <description>Name of the class that was executing for this log.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMLRows__c</fullName>
        <description>The number of records that have been processed with any statement that counts against DML limits, such as DML statements, the Database.emptyRecycleBin method, and other methods.</description>
        <label>DML Rows</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMLStatements__c</fullName>
        <description>The number of DML statements (such as insert, update or the database.EmptyRecycleBin method) that have been called.</description>
        <label>Number of DML statements</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <description>The time when the execution of the apex transaction is completed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>In case of webservice callout, update this field with endpoint URL otherwise leave this field blank</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Error_Cause__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Line__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeapSize__c</fullName>
        <description>The approximate amount of memory (in bytes) that has been used for the heap.</description>
        <label>Heap Size</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IntegrationType__c</fullName>
        <description>The type of integration inbound or outbound.</description>
        <label>Integration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>Method name defined by the System Apex class in the transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Method</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>Update this field with name of application initiating webservice call. If error is not webservice call, leave this field blank</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queries__c</fullName>
        <description>The number of SOQL queries that have been issued.</description>
        <label>Number of SOQL queries</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QueryLocatorRows__c</fullName>
        <description>The number of records that have been returned by the Database.getQueryLocator method.</description>
        <label>Query Locator Rows</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QueryRows__c</fullName>
        <description>The number of records that have been returned by issuing SOQL queries.</description>
        <label>Number of query rows</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <description>Salesforce record Id or the external Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>Use for API request JSON, if the length is greater than 131072 then an attachment will be created for this request.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>Use for API response JSON, if the length is greater than 131072 then an attachment will be created for this response.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SOSLQueries__c</fullName>
        <description>The number of SOSL queries that have been issued.</description>
        <label>Number of SOSL queries</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceName__c</fullName>
        <description>Use in case of an API, it contains the serviceName.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <description>Get the stack trace of the Apex transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Stack Trace</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <description>The time when the apex transaction started.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <description>In case of webservice callout, update this field with http response status code otherwise leave this field blank</description>
        <label>Status Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <description>In case of webservice callout, update this field with http response status message otherwise leave this field blank</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeTaken__c</fullName>
        <description>Time take to complete the apex transaction execution.</description>
        <label>Time Taken</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransactionId__c</fullName>
        <description>Unique Id generated for each transaction to identify if multiple logs are generated.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Transaction Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UrlParamaters__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Url parameters are stored here for GET Request</inlineHelpText>
        <label>UrlParamaters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The logged-in user trying to perform the current operation.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Origin__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>Endpoint__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LinkClaimSearch</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Origin__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>Endpoint__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>LinkClaimSearch</label>
    </listViews>
    <listViews>
        <fullName>ORSEAIPToken</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Origin__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>Endpoint__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>ORSEAIPToken</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>ORSEAIPToken</label>
    </listViews>
    <listViews>
        <fullName>TODAY</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Endpoint__c</columns>
        <columns>Status_Code__c</columns>
        <columns>Status_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>TODAY</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{0000000000}</displayFormat>
        <label>Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>